Hack to fix clipped outline style

--- a/src/index.scss
+++ b/src/index.scss
@@ -1531,3 +1531,7 @@ $lineAdjustment: 4px;
     transform: translate(-8px,-5px);
   }
 }
+
+.negative-outline-offset {
+  outline-offset: -4px;
+}
